2009-11-11  Nate Chapin  <japhet@chromium.org>

        Reviewed by Dimitri Glazkov.

        Remove WebViewImpl::dragSourceMovedTo(), as it is no longer
        needed after http://trac.webkit.org/changeset/50786.

        https://bugs.webkit.org/show_bug.cgi?id=31354

        * src/WebViewImpl.cpp:

2009-11-10  Nate Chapin  <japhet@chromium.org>

        Unreviewed, Chromium build fix for http://trac.webkit.org/changeset/50760.

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::paint):

2009-11-10  Yaar Schnitman  <yaar@chromium.org>

        Reviewed by Dimitri Glazkov.

        Modified WebKit.gyp to build the webkit api.

        https://bugs.webkit.org/show_bug.cgi?id=31320

        * README: Added.
        * WebKit.gyp: Added.
        * webkit.gyp: Removed.

2009-11-10  Nate Chapin  <japhet@chromium.org>

        Reviewed by Eric Seidel.

        Update references to Canvas 3D classes to use the WebGL prefix
        introduced in http://trac.webkit.org/changeset/50725.

        https://bugs.webkit.org/show_bug.cgi?id=31276

        * src/GraphicsContext3D.cpp:
        (WebCore::GraphicsContext3DInternal::beginPaint):
        (WebCore::GraphicsContext3DInternal::bindBuffer):
        (WebCore::GraphicsContext3DInternal::bindTexture):
        (WebCore::GraphicsContext3D::beginPaint):
        (WebCore::GraphicsContext3D::bindAttribLocation):
        (WebCore::GraphicsContext3D::bindBuffer):
        (WebCore::GraphicsContext3D::bindTexture):
        (WebCore::GraphicsContext3D::bufferData):
        (WebCore::GraphicsContext3D::bufferSubData):
        (WebCore::GraphicsContext3D::detachShader):
        (WebCore::GraphicsContext3D::getActiveAttrib):
        (WebCore::GraphicsContext3D::getActiveUniform):
        (WebCore::GraphicsContext3D::getAttribLocation):
        (WebCore::GraphicsContext3D::getBooleanv):
        (WebCore::GraphicsContext3D::getBufferParameteriv):
        (WebCore::GraphicsContext3D::getFloatv):