@@ -127,9 +127,6 @@ public:
         const WebPoint& clientPoint,
         const WebPoint& screenPoint,
         WebDragOperation operation);
-    virtual void dragSourceMovedTo(
-        const WebPoint& clientPoint,
-        const WebPoint& screenPoint);
     virtual void dragSourceSystemDragEnded();
     virtual WebDragOperation dragTargetDragEnter(
         const WebDragData& dragData, int identity,
