@@ -1,5 +1,17 @@
 2009-11-11  Nate Chapin  <japhet@chromium.org>
 
+        Reviewed by Eric Seidel.
+
+        Remove some additional references to dragSourceMovedTo() not
+        needed after http://trac.webkit.org/changeset/50786.
+
+        https://bugs.webkit.org/show_bug.cgi?id=31354
+
+        * public/WebView.h:
+        * src/WebViewImpl.h:
+
+2009-11-11  Nate Chapin  <japhet@chromium.org>
+
         Reviewed by Dimitri Glazkov.
 
         Remove WebViewImpl::dragSourceMovedTo(), as it is no longer
